--- a/styles/HeaderTabs.module.css
+++ b/styles/HeaderTabs.module.css
@@ -28,11 +28,15 @@
   background-color: light-dark(var(--mantine-color-white), var(--mantine-color-dark-8));
 }
 
+.tabs {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .tabsList {
   &::before {
     display: none;
   }
-  justify-content: center;
 }
 
 .tab {
