--- a/styles/HeaderMenu.module.css
+++ b/styles/HeaderMenu.module.css
@@ -1,32 +1,53 @@
 .header {
-    height: rem(56px);
-    /* margin-bottom: rem(120px); */
-    background-color: var(--mantine-color-body);
-    border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+  height: rem(56px);
+  /* margin-bottom: rem(120px); */
+  background-color: var(--mantine-color-body);
+  border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+}
+
+.inner {
+  height: rem(56px);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+background-color: ;
+}
+
+.link {
+  display: block;
+  line-height: 1;
+  padding: rem(8px) rem(12px);
+  border-radius: var(--mantine-radius-sm);
+  text-decoration: none;
+  color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
+  font-size: var(--mantine-font-size-sm);
+  font-weight: 500;
+
+  @mixin hover {
+    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
   }
-  
-  .inner {
-    height: rem(56px);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .link {
-    display: block;
-    line-height: 1;
-    padding: rem(8px) rem(12px);
-    border-radius: var(--mantine-radius-sm);
-    text-decoration: none;
-    color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
-    font-size: var(--mantine-font-size-sm);
-    font-weight: 500;
-  
-    @mixin hover {
-      background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
-    }
-  }
-  
-  .linkLabel {
-    margin-right: rem(5px);
-  }
+}
+
+.linkLabel {
+  margin-right: rem(5px);
+}
+
+.headerLink {
+  display: flex;
+  align-items: center;
+  color: #e7c608;
+  /* Change color as needed */
+  font-size: 1.2rem;
+  /* Adjust font size as needed */
+  font-weight: bold;
+  /* Adjust font weight as needed */
+  text-decoration: none;
+  /* Remove underline */
+  background-color: #003768;
+
+}
+
+.headerLink:hover {
+  color:white;
+  /* Change color on hover as needed */
+}
