--- a/app/gallery/gallery.css
+++ b/app/gallery/gallery.css
@@ -42,8 +42,9 @@
 
 .download-message {
     position: fixed;
-    bottom: 20px;
-    right: 20px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: rgba(255, 255, 255, 0.9);
     padding: 10px 20px;
     border-radius: 5px;
